fix rankstab table on mobile widths

--- a/src/app/components/Pages/Profile/ranks/rankstab.scss
+++ b/src/app/components/Pages/Profile/ranks/rankstab.scss
@@ -49,6 +49,17 @@
         .name{
             text-align: center;
         }
+        .region{
+            white-space: pre;
+            text-overflow: ellipsis;
+        }
+        .rank{
+            text-align: left;
+            margin: 0;
+        }
+        .rank-image{
+            display: none;
+        }
 
         @include medium{
             .fauxtable-cell,
@@ -66,8 +77,10 @@
                 text-align: left;
                 padding: 0;
                 .rank-image {
+                    display: inline-block;
                     width: $l*4;
                     height: $l*4;
+                    margin-right: $l*0.5;
                 }
             }
             .season {
@@ -114,11 +127,6 @@
                 justify-content: flex-end;
                 text-align: right;
                 flex-grow: 2;
-            }
-            .ranks-text {
-                position: absolute;
-                margin-top: 15px;
-                margin-left: 5px;
             }
         }
     }
